--- a/nmslinstancemanage.html
+++ b/nmslinstancemanage.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NodalMinecraftServerLauncher</title>
+    <title>NMSL实例管理</title>
   </head>
 
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/InstanceManage/InstanceManage.ts"></script>
   </body>
 </html>
